@@ -13,6 +13,8 @@
 		(voir réorganisation ci-dessous)
 	* Pour les versions suivantes, juste garder “./data/config.php” et “./data/*_user.php”,
 		éventuellement “./data/persona/*”
+* Rafraîchissement automatique du nombre d’articles non lus toutes les minutes (utilise le cache HTTP à bon escient)
+	* Permet aussi de conserver la session valide, surtout dans le cas de Persona
 * Importation OPML instantanée et plus tolérante
 * Nouvelle gestion des favicons avec téléchargement en parallèle
 * Nouvelles options
